src/grammar/CParser.py
# Generated from src/grammar/C.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'char'", 
                     "'const'", "'continue'", "'default'", "'do'", "'double'", 
                     "'else'", "'enum'", "'extern'", "'float'", "'for'", 
                     "'goto'", "'if'", "'int'", "'long'", "'register'", 
                     "'return'", "'short'", "'signed'", "'sizeof'", "'static'", 
                     "'struct'", "'switch'", "'typedef'", "'union'", "'unsigned'", 
                     "'void'", "'volatile'", "'while'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", 
                     "'>>='", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'~'", "'&'", "'|'", "'^'", "'<<'", "'>>'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'.'", "'->'", "'?'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "':'", "';'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'#include'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CHAR", "CONST", 
                      "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", 
                      "EXTERN", "FLOAT", "FOR", "GOTO", "IF", "INT", "LONG", 
                      "REGISTER", "RETURN", "SHORT", "SIGNED", "SIZEOF", 
                      "STATIC", "STRUCT", "SWITCH", "TYPEDEF", "UNION", 
                      "UNSIGNED", "VOID", "VOLATILE", "WHILE", "ASSIGN_OP", 
                      "PLUS_ASSIGN_OP", "MINUS_ASSIGN_OP", "STAR_ASSIGN_OP", 
                      "SLASH_ASSIGN_OP", "PERCENT_ASSIGN_OP", "AMPERSAND_ASSIGN_OP", 
                      "BAR_ASSIGN_OP", "CARET_ASSIGN_OP", "SHIFTL_ASSIGN_OP", 
                      "SHIFTR_ASSING_OP", "INCREMENT_OP", "DECREMENT_OP", 
                      "PLUS_OP", "MINUS_OP", "STAR_OP", "SLASH_OP", "PERCENT_OP", 
                      "TILDE_OP", "AMPERSAND_OP", "BAR_OP", "CARET_OP", 
                      "SHIFTL_OP", "SHIFTR_OP", "NOT_OP", "AND_OP", "OR_OP", 
                      "EQ_OP", "NEQ_OP", "LT_OP", "LE_OP", "GT_OP", "GE_OP", 
                      "DOT_OP", "ARROW_OP", "QUESTION_OP", "LPAREN", "RPAREN", 
                      "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COLON", 
                      "SEMICOLON", "COMMA", "INT_LITERAL", "REAL_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "INCLUDE", 
                      "PATH", "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_start = 0
    RULE_function_declaration = 1
    RULE_function_parameter = 2
    RULE_return_type = 3
    RULE_macro = 4
    RULE_statement = 5
    RULE_compound_statement = 6
    RULE_selection_statement = 7
    RULE_iteration_statement = 8
    RULE_jump_statement = 9
    RULE_expression = 10
    RULE_literal = 11
    RULE_variable = 12
    RULE_type_specifier = 13
    RULE_explicit_cast_type = 14
    RULE_declaration = 15
    RULE_declarator = 16
    RULE_function_call = 17

    ruleNames =  [ "start", "function_declaration", "function_parameter", 
                   "return_type", "macro", "statement", "compound_statement", 
                   "selection_statement", "iteration_statement", "jump_statement", 
                   "expression", "literal", "variable", "type_specifier", 
                   "explicit_cast_type", "declaration", "declarator", "function_call" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CHAR=4
    CONST=5
    CONTINUE=6
    DEFAULT=7
    DO=8
    DOUBLE=9
    ELSE=10
    ENUM=11
    EXTERN=12
    FLOAT=13
    FOR=14
    GOTO=15
    IF=16
    INT=17
    LONG=18
    REGISTER=19
    RETURN=20
    SHORT=21
    SIGNED=22
    SIZEOF=23
    STATIC=24
    STRUCT=25
    SWITCH=26
    TYPEDEF=27
    UNION=28
    UNSIGNED=29
    VOID=30
    VOLATILE=31
    WHILE=32
    ASSIGN_OP=33
    PLUS_ASSIGN_OP=34
    MINUS_ASSIGN_OP=35
    STAR_ASSIGN_OP=36
    SLASH_ASSIGN_OP=37
    PERCENT_ASSIGN_OP=38
    AMPERSAND_ASSIGN_OP=39
    BAR_ASSIGN_OP=40
    CARET_ASSIGN_OP=41
    SHIFTL_ASSIGN_OP=42
    SHIFTR_ASSING_OP=43
    INCREMENT_OP=44
    DECREMENT_OP=45
    PLUS_OP=46
    MINUS_OP=47
    STAR_OP=48
    SLASH_OP=49
    PERCENT_OP=50
    TILDE_OP=51
    AMPERSAND_OP=52
    BAR_OP=53
    CARET_OP=54
    SHIFTL_OP=55
    SHIFTR_OP=56
    NOT_OP=57
    AND_OP=58
    OR_OP=59
    EQ_OP=60
    NEQ_OP=61
    LT_OP=62
    LE_OP=63
    GT_OP=64
    GE_OP=65
    DOT_OP=66
    ARROW_OP=67
    QUESTION_OP=68
    LPAREN=69
    RPAREN=70
    LBRACKET=71
    RBRACKET=72
    LBRACE=73
    RBRACE=74
    COLON=75
    SEMICOLON=76
    COMMA=77
    INT_LITERAL=78
    REAL_LITERAL=79
    CHAR_LITERAL=80
    STRING_LITERAL=81
    IDENTIFIER=82
    INCLUDE=83
    PATH=84
    COMMENT=85
    LINE_COMMENT=86
    WS=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(CParser.Function_declarationContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CParser.DeclarationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.SEMICOLON)
            else:
                return self.getToken(CParser.SEMICOLON, i)

        def macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.MacroContext)
            else:
                return self.getTypedRuleContext(CParser.MacroContext,i)


        def compound_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Compound_statementContext)
            else:
                return self.getTypedRuleContext(CParser.Compound_statementContext,i)


        def getRuleIndex(self):
            return CParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.CHAR) | (1 << CParser.CONST) | (1 << CParser.FLOAT) | (1 << CParser.INT) | (1 << CParser.VOID))) != 0) or _la==CParser.INCLUDE:
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.function_declaration()
                    self.state = 39
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CParser.SEMICOLON]:
                        self.state = 37
                        self.match(CParser.SEMICOLON)
                        pass
                    elif token in [CParser.LBRACE]:
                        self.state = 38
                        self.compound_statement()
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass

                elif la_ == 2:
                    self.state = 41
                    self.declaration()
                    self.state = 42
                    self.match(CParser.SEMICOLON)
                    pass

                elif la_ == 3:
                    self.state = 44
                    self.macro()
                    pass


                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(CParser.Return_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def function_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Function_parameterContext)
            else:
                return self.getTypedRuleContext(CParser.Function_parameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def getRuleIndex(self):
            return CParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = CParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.return_type()
            self.state = 51
            self.match(CParser.IDENTIFIER)
            self.state = 52
            self.match(CParser.LPAREN)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.CHAR) | (1 << CParser.CONST) | (1 << CParser.FLOAT) | (1 << CParser.INT))) != 0):
                self.state = 53
                self.function_parameter()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CParser.COMMA:
                    self.state = 54
                    self.match(CParser.COMMA)
                    self.state = 55
                    self.function_parameter()
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 63
            self.match(CParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_parameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(CParser.Type_specifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def STAR_OP(self):
            return self.getToken(CParser.STAR_OP, 0)

        def CONST(self):
            return self.getToken(CParser.CONST, 0)

        def getRuleIndex(self):
            return CParser.RULE_function_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_parameter" ):
                listener.enterFunction_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_parameter" ):
                listener.exitFunction_parameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_parameter" ):
                return visitor.visitFunction_parameter(self)
            else:
                return visitor.visitChildren(self)




    def function_parameter(self):

        localctx = CParser.Function_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.type_specifier()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CParser.STAR_OP:
                self.state = 66
                self.match(CParser.STAR_OP)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.CONST:
                    self.state = 67
                    self.match(CParser.CONST)




            self.state = 72
            self.match(CParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(CParser.FLOAT, 0)

        def INT(self):
            return self.getToken(CParser.INT, 0)

        def CHAR(self):
            return self.getToken(CParser.CHAR, 0)

        def STAR_OP(self):
            return self.getToken(CParser.STAR_OP, 0)

        def VOID(self):
            return self.getToken(CParser.VOID, 0)

        def getRuleIndex(self):
            return CParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = CParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_return_type)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.CHAR, CParser.FLOAT, CParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.CHAR) | (1 << CParser.FLOAT) | (1 << CParser.INT))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.STAR_OP:
                    self.state = 75
                    self.match(CParser.STAR_OP)


                pass
            elif token in [CParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(CParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CParser.INCLUDE, 0)

        def LT_OP(self):
            return self.getToken(CParser.LT_OP, 0)

        def PATH(self):
            return self.getToken(CParser.PATH, 0)

        def GT_OP(self):
            return self.getToken(CParser.GT_OP, 0)

        def getRuleIndex(self):
            return CParser.RULE_macro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacro" ):
                listener.enterMacro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacro" ):
                listener.exitMacro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro" ):
                return visitor.visitMacro(self)
            else:
                return visitor.visitChildren(self)




    def macro(self):

        localctx = CParser.MacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_macro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(CParser.INCLUDE)
            self.state = 82
            self.match(CParser.LT_OP)
            self.state = 83
            self.match(CParser.PATH)
            self.state = 84
            self.match(CParser.GT_OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CParser.SEMICOLON, 0)

        def selection_statement(self):
            return self.getTypedRuleContext(CParser.Selection_statementContext,0)


        def iteration_statement(self):
            return self.getTypedRuleContext(CParser.Iteration_statementContext,0)


        def jump_statement(self):
            return self.getTypedRuleContext(CParser.Jump_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.LBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.compound_statement()
                pass
            elif token in [CParser.INCREMENT_OP, CParser.DECREMENT_OP, CParser.PLUS_OP, CParser.MINUS_OP, CParser.STAR_OP, CParser.AMPERSAND_OP, CParser.NOT_OP, CParser.LPAREN, CParser.INT_LITERAL, CParser.REAL_LITERAL, CParser.CHAR_LITERAL, CParser.STRING_LITERAL, CParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.expression(0)
                self.state = 88
                self.match(CParser.SEMICOLON)
                pass
            elif token in [CParser.IF, CParser.SWITCH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.selection_statement()
                pass
            elif token in [CParser.DO, CParser.FOR, CParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.iteration_statement()
                pass
            elif token in [CParser.BREAK, CParser.CONTINUE, CParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.jump_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CParser.DeclarationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.SEMICOLON)
            else:
                return self.getToken(CParser.SEMICOLON, i)

        def getRuleIndex(self):
            return CParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = CParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compound_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(CParser.LBRACE)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.BREAK) | (1 << CParser.CHAR) | (1 << CParser.CONST) | (1 << CParser.CONTINUE) | (1 << CParser.DO) | (1 << CParser.FLOAT) | (1 << CParser.FOR) | (1 << CParser.IF) | (1 << CParser.INT) | (1 << CParser.RETURN) | (1 << CParser.SWITCH) | (1 << CParser.WHILE) | (1 << CParser.INCREMENT_OP) | (1 << CParser.DECREMENT_OP) | (1 << CParser.PLUS_OP) | (1 << CParser.MINUS_OP) | (1 << CParser.STAR_OP) | (1 << CParser.AMPERSAND_OP) | (1 << CParser.NOT_OP))) != 0) or ((((_la - 69)) & ~0x3f) == 0 and ((1 << (_la - 69)) & ((1 << (CParser.LPAREN - 69)) | (1 << (CParser.LBRACE - 69)) | (1 << (CParser.INT_LITERAL - 69)) | (1 << (CParser.REAL_LITERAL - 69)) | (1 << (CParser.CHAR_LITERAL - 69)) | (1 << (CParser.STRING_LITERAL - 69)) | (1 << (CParser.IDENTIFIER - 69)))) != 0):
                self.state = 100
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CParser.BREAK, CParser.CONTINUE, CParser.DO, CParser.FOR, CParser.IF, CParser.RETURN, CParser.SWITCH, CParser.WHILE, CParser.INCREMENT_OP, CParser.DECREMENT_OP, CParser.PLUS_OP, CParser.MINUS_OP, CParser.STAR_OP, CParser.AMPERSAND_OP, CParser.NOT_OP, CParser.LPAREN, CParser.LBRACE, CParser.INT_LITERAL, CParser.REAL_LITERAL, CParser.CHAR_LITERAL, CParser.STRING_LITERAL, CParser.IDENTIFIER]:
                    self.state = 96
                    self.statement()
                    pass
                elif token in [CParser.CHAR, CParser.CONST, CParser.FLOAT, CParser.INT]:
                    self.state = 97
                    self.declaration()
                    self.state = 98
                    self.match(CParser.SEMICOLON)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(CParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Selection_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CParser.ELSE, 0)

        def SWITCH(self):
            return self.getToken(CParser.SWITCH, 0)

        def getRuleIndex(self):
            return CParser.RULE_selection_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelection_statement" ):
                listener.enterSelection_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelection_statement" ):
                listener.exitSelection_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelection_statement" ):
                return visitor.visitSelection_statement(self)
            else:
                return visitor.visitChildren(self)




    def selection_statement(self):
